@@ -7,6 +7,7 @@ v 0.9.1
 - Show name of last packager in fedorarpms#show
 - Show last commit message in fedorarpms#show
 - Show last commit date in fedorarpms#show
+- Use api to fetch rawhide version instead of scrapping page
 
 v 0.9.0
 
